Fix potential vulnerabilities and replace dependencies to devDep

--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "ejs": "^2.6.1",
-    "event-stream": "^4.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "flatmap-stream": "0.0.1-security",
     "mongoose": "^5.4.2",
     "morgan": "^1.9.1",
-    "mysql2": "^1.6.1",
-    "react-meta-tags": "^0.7.1",
-    "react-router-dom": "^4.3.1"
+    "mysql2": "^1.6.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
@@ -34,6 +30,8 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
     "errorhandler": "^1.5.0",
+    "event-stream": "^4.0.1",
+    "flatmap-stream": "0.0.1-security",
     "mini-css-extract-plugin": "^0.4.3",
     "mixin-loader": "^2.0.3",
     "node-sass": "^4.9.3",
@@ -43,6 +41,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-hot-loader": "^4.3.8",
+    "react-meta-tags": "^0.7.3",
+    "react-router-dom": "^4.3.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^2.0.0",
