--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react-ga": "^2.5.7",
-    "sequelize": "^5.8.2"
+    "sequelize": "^5.3.0",
+    "tar": "^4.4.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
