// Dependencies [Update] axios, fstream (Fix vulnerabilities) [Add] Dependency Serve-Favicon // Assets [Add] Comments (JS Docs) Gen. [Add] Anchor scrollTo [Add] Design Dashboard (beginner) [Add] Placeholder Stages SignUp [Replace] Auth classes to Form [Add] JSON-LD Organization [Add] Adaptative Button (isAuthed?) [Add] Error view [Add] Summoners Rift Image // APP [Fix] Cache Controller [Add] Error Routing [Fix] Lazy Loading & WebP Controller (too many requests)

--- a/public/config/config-fr.json
+++ b/public/config/config-fr.json
@@ -59,7 +59,7 @@
                 "feedback": "/#feedback",
                 "login": "/login",
                 "signup": "/signup",
-                "dashboard": "Dashboard"
+                "dashboard": "/dashboard"
             }
         }
     },
