--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "fstream": "^1.0.12",
     "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
@@ -32,6 +33,7 @@
     "react-hot-loader": "^4.8.4",
     "react-placeholder": "^3.0.2",
     "sequelize": "^5.3.0",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "tar": "^4.4.2"
@@ -40,7 +42,7 @@
     "@babel/cli": "^7.4.3",
     "@babel/polyfill": "^7.4.3",
     "@hot-loader/react-dom": "^16.8.6",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^0.1.19",
     "compass-mixins": "^0.12.10",
