--- a/public/config/config-en.json
+++ b/public/config/config-en.json
@@ -60,7 +60,7 @@
                 "feedback": "/#feedback",
                 "login": "/login",
                 "signup": "/signup",
-                "dashboard": "Dashboard"
+                "dashboard": "/dashboard"
             }
         }
     },
